--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-appwrite": "^0.4.0",
+    "react-native-restart": "^0.0.27",
     "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0"
   },
