--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "axios": "^1.7.2",
     "expo": "~51.0.24",
     "expo-file-system": "^17.0.1",
     "expo-status-bar": "~1.12.1",
