--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-appwrite": "^0.4.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-restart": "^0.0.27",
+    "react-native-svg": "^15.4.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0"
   },
