--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,9 +83,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'dev.shuchir.wmfwear'
+    namespace 'dev.shuchir.wheresmyflight'
     defaultConfig {
-        applicationId 'dev.shuchir.wmfwear'
+        applicationId 'dev.shuchir.wheresmyflight'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
